# digitizer-teledyne

./: .gitignore  CMakeLists.txt  README.md  acquire_to_disk.c
acquire_to_disk/: CMakeLists.txt  acquire_to_disk.c  acquire_to_disk.h
acquire_to_memory/: CMakeLists.txt  acquire_to_memory.c  acquire_to_memory.h
acquire_two_channels/: CMakeLists.txt  acquire_two_channels.c  acquire_two_channels.h  plot.py
continuous_acquisition/: CMakeLists.txt  continuous_acquisition.c  continuous_acquisition.h
continuous_acquisition_gpu/: CMakeLists.txt  continuous_acquisition_gpu.c  continuous_acquisition_gpu.h
tools/: plot.py
